// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkFee renders a NetworkFee in a loading state 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      collapsable={false}
      focusVisibleStyle={{}}
      forwardedRef={[Function]}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "column",
            "flexShrink": 1,
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "column",
            "flexShrink": 1,
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          numberOfLines={3}
          style={
            {
              "color": "rgba(255, 255, 255, 0.65)",
              "flexShrink": 1,
              "fontFamily": "Basel Grotesk",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 19.5,
            }
          }
          suppressHighlighting={true}
        >
          Network cost
        </Text>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={12}
          bbWidth={12}
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth={8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "rgba(255, 255, 255, 0.38)",
                "height": 12,
                "width": 12,
              },
              {
                "flex": 0,
                "height": 12,
                "width": 12,
              },
            ]
          }
          vbHeight={16}
          vbWidth={16}
        >
          <RNSVGGroup
            color="rgba(255, 255, 255, 0.38)"
            fill={null}
            propList={
              [
                "fill",
                "strokeWidth",
              ]
            }
            strokeWidth={8}
          >
            <RNSVGPath
              d="M7.99992 1.33325C4.31792 1.33325 1.33325 4.31792 1.33325 7.99992C1.33325 11.6819 4.31792 14.6666 7.99992 14.6666C11.6819 14.6666 14.6666 11.6819 14.6666 7.99992C14.6666 4.31792 11.6819 1.33325 7.99992 1.33325ZM8.49992 10.9999C8.49992 11.2759 8.27592 11.4999 7.99992 11.4999C7.72392 11.4999 7.49992 11.2759 7.49992 10.9999V7.95256C7.49992 7.67656 7.72392 7.45256 7.99992 7.45256C8.27592 7.45256 8.49992 7.67656 8.49992 7.95256V10.9999ZM8.01327 6.33325C7.64527 6.33325 7.34318 6.03459 7.34318 5.66659C7.34318 5.29859 7.63859 4.99992 8.00659 4.99992H8.01327C8.38193 4.99992 8.67993 5.29859 8.67993 5.66659C8.67993 6.03459 8.38127 6.33325 8.01327 6.33325Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flexDirection": "column",
          "opacity": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.12)",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "flexDirection": "column",
            "height": 20,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee in an error state 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      collapsable={false}
      focusVisibleStyle={{}}
      forwardedRef={[Function]}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "column",
            "flexShrink": 1,
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "column",
            "flexShrink": 1,
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          numberOfLines={3}
          style={
            {
              "color": "rgba(255, 255, 255, 0.65)",
              "flexShrink": 1,
              "fontFamily": "Basel Grotesk",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 19.5,
            }
          }
          suppressHighlighting={true}
        >
          Network cost
        </Text>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={12}
          bbWidth={12}
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth={8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "rgba(255, 255, 255, 0.38)",
                "height": 12,
                "width": 12,
              },
              {
                "flex": 0,
                "height": 12,
                "width": 12,
              },
            ]
          }
          vbHeight={16}
          vbWidth={16}
        >
          <RNSVGGroup
            color="rgba(255, 255, 255, 0.38)"
            fill={null}
            propList={
              [
                "fill",
                "strokeWidth",
              ]
            }
            strokeWidth={8}
          >
            <RNSVGPath
              d="M7.99992 1.33325C4.31792 1.33325 1.33325 4.31792 1.33325 7.99992C1.33325 11.6819 4.31792 14.6666 7.99992 14.6666C11.6819 14.6666 14.6666 11.6819 14.6666 7.99992C14.6666 4.31792 11.6819 1.33325 7.99992 1.33325ZM8.49992 10.9999C8.49992 11.2759 8.27592 11.4999 7.99992 11.4999C7.72392 11.4999 7.49992 11.2759 7.49992 10.9999V7.95256C7.49992 7.67656 7.72392 7.45256 7.99992 7.45256C8.27592 7.45256 8.49992 7.67656 8.49992 7.95256V10.9999ZM8.01327 6.33325C7.64527 6.33325 7.34318 6.03459 7.34318 5.66659C7.34318 5.29859 7.63859 4.99992 8.00659 4.99992H8.01327C8.38193 4.99992 8.67993 5.29859 8.67993 5.66659C8.67993 6.03459 8.38127 6.33325 8.01327 6.33325Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "borderColor": "#131313",
            "borderRadius": 4.8,
            "borderStyle": "solid",
            "borderWidth": 0,
            "flexDirection": "column",
            "height": 16,
            "overflow": "hidden",
            "width": 16,
            "zIndex": 10,
          }
        }
        testID="network-logo"
      >
        <Image
          resizeMode="contain"
          source="mock-asset-ETHEREUM_LOGO.png"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
        />
      </View>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.4}
        style={
          {
            "color": "rgba(255, 255, 255, 0.65)",
            "fontFamily": "Basel Grotesk",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 19.5,
          }
        }
        suppressHighlighting={true}
      >
        N/A
      </Text>
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee normally 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      collapsable={false}
      focusVisibleStyle={{}}
      forwardedRef={[Function]}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "column",
            "flexShrink": 1,
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 12,
            "borderBottomRightRadius": 12,
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "column",
            "flexShrink": 1,
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          numberOfLines={3}
          style={
            {
              "color": "rgba(255, 255, 255, 0.65)",
              "flexShrink": 1,
              "fontFamily": "Basel Grotesk",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 19.5,
            }
          }
          suppressHighlighting={true}
        >
          Network cost
        </Text>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={12}
          bbWidth={12}
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth={8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "rgba(255, 255, 255, 0.38)",
                "height": 12,
                "width": 12,
              },
              {
                "flex": 0,
                "height": 12,
                "width": 12,
              },
            ]
          }
          vbHeight={16}
          vbWidth={16}
        >
          <RNSVGGroup
            color="rgba(255, 255, 255, 0.38)"
            fill={null}
            propList={
              [
                "fill",
                "strokeWidth",
              ]
            }
            strokeWidth={8}
          >
            <RNSVGPath
              d="M7.99992 1.33325C4.31792 1.33325 1.33325 4.31792 1.33325 7.99992C1.33325 11.6819 4.31792 14.6666 7.99992 14.6666C11.6819 14.6666 14.6666 11.6819 14.6666 7.99992C14.6666 4.31792 11.6819 1.33325 7.99992 1.33325ZM8.49992 10.9999C8.49992 11.2759 8.27592 11.4999 7.99992 11.4999C7.72392 11.4999 7.49992 11.2759 7.49992 10.9999V7.95256C7.49992 7.67656 7.72392 7.45256 7.99992 7.45256C8.27592 7.45256 8.49992 7.67656 8.49992 7.95256V10.9999ZM8.01327 6.33325C7.64527 6.33325 7.34318 6.03459 7.34318 5.66659C7.34318 5.29859 7.63859 4.99992 8.00659 4.99992H8.01327C8.38193 4.99992 8.67993 5.29859 8.67993 5.66659C8.67993 6.03459 8.38127 6.33325 8.01327 6.33325Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "borderColor": "#131313",
            "borderRadius": 4.8,
            "borderStyle": "solid",
            "borderWidth": 0,
            "flexDirection": "column",
            "height": 16,
            "overflow": "hidden",
            "width": 16,
            "zIndex": 10,
          }
        }
        testID="network-logo"
      >
        <Image
          resizeMode="contain"
          source="mock-asset-ETHEREUM_LOGO.png"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
        />
      </View>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.4}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Basel Grotesk",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 19.5,
          }
        }
        suppressHighlighting={true}
      >
        $1
      </Text>
    </View>
  </View>
</View>
`;
